src/parser/test/esprima/invalid-syntax/strict_assignment_package.js
function hello() { "use strict"; package = 1; }
